<resources>
    <string name="app_name">ProjectCube</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip_login">Skip Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reconfirm">Reconfirm</string>
    <string name="night_mode">Night Mode</string>
    <string name="name">Name</string>
</resources>