<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Login.StartFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guildline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guildline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text"
            style="@style/Widget.ProjectCube.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="@id/end_guildline"
            app:layout_constraintStart_toStartOf="@id/start_guildline"
            app:layout_constraintTop_toBottomOf="@id/logo_img">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text"
            style="@style/Widget.ProjectCube.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="@id/start_guildline"
            app:layout_constraintRight_toRightOf="@id/end_guildline"
            app:layout_constraintTop_toBottomOf="@id/email_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/end_guildline"
            app:layout_constraintStart_toStartOf="@id/start_guildline"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/register"
            android:textColor="?android:attr/textColor"
            app:layout_constraintEnd_toStartOf="@id/skip_button"
            app:layout_constraintStart_toStartOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:strokeColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/skip_button"
            style="@style/Base.ProjectCube.Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/skip_login"
            app:layout_constraintEnd_toEndOf="@id/login_button"
            app:layout_constraintStart_toEndOf="@id/register_button"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/night_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>