<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Login.Register.RegisterFragment">
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_guildline"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_guildline"
            app:layout_constraintGuide_percent="0.9"
            android:orientation="vertical"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ProjectCube.TextInputLayout"
            app:layout_constraintVertical_bias="0.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="@id/start_guildline"
            app:layout_constraintEnd_toEndOf="@id/end_guildline"
            android:hint="@string/name"
            android:id="@+id/name_text">
            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ProjectCube.TextInputLayout"
            app:layout_constraintVertical_bias="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_guildline"
            app:layout_constraintEnd_toEndOf="@id/end_guildline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/email"
            android:id="@+id/email_text">
            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ProjectCube.TextInputLayout"
            android:id="@+id/password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="@id/start_guildline"
            app:layout_constraintRight_toRightOf="@id/end_guildline"
            app:layout_constraintTop_toBottomOf="@id/email_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ProjectCube.TextInputLayout"
            android:id="@+id/reconfirm_password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/reconfirm"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="@id/start_guildline"
            app:layout_constraintRight_toRightOf="@id/end_guildline"
            app:layout_constraintTop_toBottomOf="@id/password_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reconfirm_password_text"
            app:layout_constraintStart_toStartOf="@id/start_guildline"
            app:layout_constraintEnd_toEndOf="@id/end_guildline"
            android:id="@+id/register_button"
            android:text="@string/register"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>